# client-server

Prog1/: CMakeLists.txt  Prog_1_client  build_and_compile.sh
Prog1/src/: Prog_1_client.cpp  TCP.H  TCP.cpp  client.H  client.cpp
Prog2/: CMakeLists.txt  Prog_2_server  readme.txt
Prog2/src/: Prog_2_server.cpp  server.H  server.cpp
